tests/rosetta/transpiler/Rust/fixed-length-records-2.error
warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:55:2
   |
55 | };
   |  ^ help: remove this semicolon
   |
   = note: `#[warn(redundant_semicolons)]` on by default

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:62:2
   |
62 | };
   |  ^ help: remove this semicolon

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:69:2
   |
69 | };
   |  ^ help: remove this semicolon

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:93:2
   |
93 | };
   |  ^ help: remove this semicolon

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:94:54
   |
94 |         static mut g_lines: Vec<String> = Vec::new();;
   |                                                      ^ help: remove this semicolon

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:95:55
   |
95 |         static mut g_blocks: Vec<String> = Vec::new();;
   |                                                       ^ help: remove this semicolon

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:96:57
   |
96 |         static mut g_outLines: Vec<String> = Vec::new();;
   |                                                         ^ help: remove this semicolon

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:50:11
   |
50 |     while (i < n) {
   |           ^     ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
50 -     while (i < n) {
50 +     while i < n {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:52:13
   |
52 |         i = (i + 1);
   |             ^     ^
   |
help: remove these parentheses
   |
52 -         i = (i + 1);
52 +         i = i + 1;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:57:17
   |
57 |     let mut i = ((s.len() as i64) - 1);
   |                 ^                    ^
   |
help: remove these parentheses
   |
57 -     let mut i = ((s.len() as i64) - 1);
57 +     let mut i = (s.len() as i64) - 1;
   |

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:58:11
   |
58 |     while ((i >= 0) && (s[i as usize..(i + 1) as usize].to_string().as_str() == " ")) {
   |           ^                                                                         ^
   |
help: remove these parentheses
   |
58 -     while ((i >= 0) && (s[i as usize..(i + 1) as usize].to_string().as_str() == " ")) {
58 +     while (i >= 0) && (s[i as usize..(i + 1) as usize].to_string().as_str() == " ") {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:59:13
   |
59 |         i = (i - 1);
   |             ^     ^
   |
help: remove these parentheses
   |
59 -         i = (i - 1);
59 +         i = i - 1;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:75:22
   |
75 |         let mut le = (s.len() as i64);
   |                      ^              ^
   |
help: remove these parentheses
   |
75 -         let mut le = (s.len() as i64);
75 +         let mut le = s.len() as i64;
   |

warning: unnecessary parentheses around `if` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:76:12
   |
76 |         if (le > 64) {
   |            ^       ^
   |
help: remove these parentheses
   |
76 -         if (le > 64) {
76 +         if le > 64 {
   |

warning: unnecessary parentheses around `if` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:78:19
   |
78 |         } else if (le < 64) {
   |                   ^       ^
   |
help: remove these parentheses
   |
78 -         } else if (le < 64) {
78 +         } else if le < 64 {
   |

warning: unnecessary parentheses around function argument
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:79:49
   |
79 |             s = format!("{}{}", s, repeat(&" ", (64 - le)));
   |                                                 ^       ^
   |
help: remove these parentheses
   |
79 -             s = format!("{}{}", s, repeat(&" ", (64 - le)));
79 +             s = format!("{}{}", s, repeat(&" ", 64 - le));
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:82:17
   |
82 |         count = (count + 1);
   |                 ^         ^
   |
help: remove these parentheses
   |
82 -         count = (count + 1);
82 +         count = count + 1;
   |

warning: unnecessary parentheses around `if` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:84:8
   |
84 |     if ((count % 16) != 0) {
   |        ^                 ^
   |
help: remove these parentheses
   |
84 -     if ((count % 16) != 0) {
84 +     if (count % 16) != 0 {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:85:28
   |
85 |         let mut pad: i64 = (16 - (count % 16));
   |                            ^                 ^
   |
help: remove these parentheses
   |
85 -         let mut pad: i64 = (16 - (count % 16));
85 +         let mut pad: i64 = 16 - (count % 16);
   |

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:87:15
   |
87 |         while (i < pad) {
   |               ^       ^
   |
help: remove these parentheses
   |
87 -         while (i < pad) {
87 +         while i < pad {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:89:17
   |
89 |             i = (i + 1);
   |                 ^     ^
   |
help: remove these parentheses
   |
89 -             i = (i + 1);
89 +             i = i + 1;
   |

warning: unnecessary parentheses around `if` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:98:16
   |
98 |             if (l.as_str() != "") {
   |                ^                ^
   |
help: remove these parentheses
   |
98 -             if (l.as_str() != "") {
98 +             if l.as_str() != "" {
   |

warning: unnecessary parentheses around assigned value
   --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:104:32
    |
104 |         let duration_us: i64 = ((_end - _start) / 1000);
    |                                ^                      ^
    |
help: remove these parentheses
    |
104 -         let duration_us: i64 = ((_end - _start) / 1000);
104 +         let duration_us: i64 = (_end - _start) / 1000;
    |

warning: unnecessary parentheses around assigned value
   --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:105:33
    |
105 |         let memory_bytes: i64 = (_end_mem - _start_mem);
    |                                 ^                     ^
    |
help: remove these parentheses
    |
105 -         let memory_bytes: i64 = (_end_mem - _start_mem);
105 +         let memory_bytes: i64 = _end_mem - _start_mem;
    |

error[E0308]: mismatched types
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:74:26
   |
74 |         let mut s: i64 = line;
   |                    ---   ^^^^ expected `i64`, found `String`
   |                    |
   |                    expected due to this

error[E0599]: no method named `len` found for type `i64` in the current scope
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:75:25
   |
75 |         let mut le = (s.len() as i64);
   |                         ^^^
   |
help: there is a method `le` with a similar name, but with different arguments
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/core/src/cmp.rs:1400:5

error[E0608]: cannot index into a value of type `i64`
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:77:18
   |
77 |             s = s[0..64].to_vec();
   |                  ^^^^^^^

error[E0308]: mismatched types
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:79:17
   |
79 |             s = format!("{}{}", s, repeat(&" ", (64 - le)));
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i64`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: variable does not need to be mutable
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:47:35
   |
47 |         unsafe fn repeat(s: &str, mut n: i64) -> String {
   |                                   ----^
   |                                   |
   |                                   help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

warning: variable does not need to be mutable
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/fixed-length-records-2.rs:63:30
   |
63 |         unsafe fn block2text(mut block: Vec<String>) -> Vec<String> {
   |                              ----^^^^^
   |                              |
   |                              help: remove this `mut`

error: aborting due to 4 previous errors; 26 warnings emitted

Some errors have detailed explanations: E0308, E0599, E0608.
For more information about an error, try `rustc --explain E0308`.
